# modal-tf-gpu-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  custom_packages.py
modal_tf_builder/: builder.py
