[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modal_tf_gpu_builder"
version = "0.2.1"
authors = [
  { name="Osvald Nigola" },
]
description = "Builds stable Python 3.11 TensorFlow GPU environments on modal.com using Micromamba."
readme = "README.md"
license = { file="LICENSE" }
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Modal",
]
dependencies = [
    "modal",
    "tblib",
]

[project.urls]
Homepage = "https://github.com/ozzuke/modal-tf-gpu-builder"
Issues = "https://github.com/ozzuke/modal-tf-gpu-builder/issues"

# Find the package code
[tool.setuptools.packages.find]
where = ["."]
include = ["modal_tf_builder*"]
exclude = ["examples*", "tests*"]